# microscope_control_dev

./: .gitignore  README.md  pyproject.toml
config/scanimage_cfg/: objective_calibration.yaml  user_function_ts_20260608.json
config/wiring/: vdaq_io_map.yaml
contracts/c1_pixel_size/: c1_10xThorlabs_TL10X2P_ref.json  c1_25xOlympus_ref.json  objective_calibration.yaml
docs/: NEXT_SESSION_kickoff.md  demo_fixedslice_runsheet.md  handoff_acquisition_20260603.md  in_vivo_migration_runsheet.md  method_a_als_bench_runsheet_20260605.md  method_a_fixedframe_injection_runsheet.md  overview.md  scanimage_vdaq_internals.md  status.md  sync_architecture.md  temp.md  trigger_sync_doc_notes.md  troubleshooting.md
examples/: behavior_sidecar.example.json  sidecar_example.json
schemas/: als_sidecar.schema.json  behavior_sidecar_schema.json  galvo_sidecar.json  trigger_sync.schema.json  trigger_sync_recorded_channels.schema.json
sops/: method_a_e2e_gonogo_sop.md  scanimage_logfilestem_sop.md
src/matlab/: BehaviorAcquisition.m  alsCyclePeriodS.m  als_cycle_probe.m  legatoInjectStart.m  legatoInjectStop.m  syncArmStart.m  syncControlPanel.m  syncDisarm.m  sync_v4_probe.m
src/python/: als_inject_align.py  als_loader.py  als_overlay_panel.py  als_raster_overlay.py  analysis_postprocess.py  build_manifest.py  c1_ref_als.json  c1_ref_raster.json  compare_als_ref.py  datarecorder_loader.py  diag_ttl.py  dump_si_metadata.py  dwell_probe.py  emi_quant.py  fig_als_content.py  fig_als_raster_overlay.py  fig_recorder_panel.py  fig_sync_panel.py  make_behavior_sidecar.py  qc_core.py  (+7 more)
(+3 files in other folders)
