# microscope_control_dev/pyproject.toml
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mcd-python"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = ["numpy", "h5py"]      # datarecorder_loader が h5py を使う

[tool.setuptools]
package-dir = {"" = "src/python"}
py-modules = ["als_loader", "datarecorder_loader", "qc_core"]